--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>İsmail Harmanda</title>
+    <link rel="icon" href="./portfolio.png" />
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="İsmail Harmanda" content="İsmail Harmanda Portfolio" />
+    <meta name="author" content="İsmail Harmanda" />
+    <meta name="description" content="İsmail Harmanda Portfolio" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,7 +25,6 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
       rel="stylesheet"
     />
-    <title>İsmail Harmanda</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
